# autovpn

./: Cargo.toml  shell.nix
.cargo/: config
src/: main.rs  networkd.rs  nl80211.rs  rule.rs  wifi.rs
src/wireguard/: enums.rs  mod.rs
