[package]
name = "autovpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neli = { version = "0.6", features = [ "async" ] }
dbus = "0.9"
dbus-tokio = "0.7"
tokio = { version = "1.17", features = [ "full" ] }
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
ctrlc = { version = "3.2", features = [ "termination" ] }
