[package]
name = "autovpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neli = { version = "0.6", features = [ "async" ] }
neli-wifi = "0.6"
dbus = "0.9"
dbus-tokio = "0.7"
tokio = { version = "1.35", features = [ "full" ] }
anyhow = "1"
serde = { version = "1", features = [ "derive" ] }
toml = "0.8"
log = "0.4"
pretty_env_logger = "0.5"
ctrlc = { version = "3.4", features = [ "termination" ] }
neli-proc-macros = "0.1"

[profile.release]
lto = true
codegen-units = 1
